# cloud-project

./: .gitignore  .terraform.lock.hcl  Dockerfile  README.md  app.py  flake.nix  helpers.py  main.py  main.tf  notebook.ipynb  prop_page.py  pyproject.toml  requirements.txt  shell.nix  utils.py
.streamlit/: config.toml
.virtual_documents/: notebook.ipynb
azure-infra/: main.tf  outputs.tf
github-config/: main.tf
infra/: .terraform.lock.hcl  variables.tf
scripts/: load_data.py
test/: test_app.py
test_app/: test_app.py
