[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-streamlit-app"
version = "0.1.0"
description = "Streamlit application"
requires-python = ">=3.9" 

# Only scanning app/ folder
[tool.setuptools.packages.find]
where = ["."]
# include = ["app*", "tests*"]
